--- a/README.html
+++ b/README.html
@@ -117,13 +117,12 @@ they provide for web applications. However, the memory that they consume
 can easily become a problem. Since each website user has his own
 web browser, it would be convenient to put the continuations in the browser,
 naturally scaling the application.
-This way, a web application with 10,000 or 1,000,000 users is not burdened
-by a heavy price of memory for continuations.
+This way, a web server serving the web application to 10,000 or 1,000,000
+users is not burdened by a heavy price of memory for continuations.
 This Git project demonstrates a way to create a web application using
-client-side continuations. It includes a submodule,
-<a href="https://github.com/tomelam/jsScheme">jsScheme</a>,
-which provides the necessary code,
-and a test program, <code>sequential.txt</code>.</p>
+client-side continuations. It includes
+<a href="https://github.com/tomelam/jsScheme">jsScheme</a>, a nearly complete
+implementation of R5RS Scheme language in JavaScript, as a submodule.</p>
 <p>The test program, apart from supporting functions and macros,
 is just this:</p>
 <pre><code>	(define (test)
@@ -140,39 +139,17 @@ The function <code>get-input</code> sets up a continuation that returns
 execution to that point only after an event has occurred.</p>
 <p>Here are instructions for running the application:</p>
 <ol>
+<li>Clone the Git repository for the demo:</li>
+</ol>
+<pre><code>	git clone --recurse-submodules git@github.com:tomelam/sequential_web_app_demo.git
+</code></pre>
+<ol start="2">
 <li>
-<p>Clone the Git repository for
-<a href="https://github.com/tomelam/sequential_web_app_demo">the demo</a>.</p>
-</li>
-<li>
-<p>The Git submodule contains a file <code>scheme.html</code>. Open it in a
-web browser, either as a file or as a URL. You will see jsScheme's input
-textarea and its <code>Log</code> textarea. To the right of the input textarea are
-buttons <code>eval</code>, <code>clear input</code>, etc.</p>
-</li>
-<li>
-<p>Press the <code>library</code> button. The library will be copied into the input
-textarea.</p>
-</li>
-<li>
-<p>Press the <code>eval</code> button. The library will be added to jsScheme's
-work environment and lots of stuff will be printed in the Log.</p>
-</li>
-<li>
-<p>Clear the <code>input</code> and <code>Log</code>.</p>
-</li>
-<li>
-<p>The cloned repository contains a file <code>sequential.txt</code>. Copy it
-into the <code>input</code> textarea.</p>
-</li>
-<li>
-<p>Press the <code>eval</code> button. Lots of stuff will be printed in the <code>Log</code>.</p>
-</li>
-<li>
-<p>Clear the <code>input</code> and <code>log</code>.</p>
-</li>
-<li>
-<p>Type <code>(reset (test))</code> into the input textarea, then press <code>eval</code>.</p>
+<p>The Git submodule <code>jsScheme</code> contains a file <code>scheme.html</code>. Open it
+in a web browser, either as a file or as a URL. You will see jsScheme's
+<code>Input</code> textarea and its <code>Log</code> textarea. To the right of the
+<code>Input</code> textarea are buttons <code>eval</code>, <code>clear input</code>, and
+<code>clear log</code>.</p>
 </li>
 <li>
 <p>Type the following into the <code>input</code> textarea, then press <code>eval</code>.
@@ -180,25 +157,23 @@ In the <code>Log</code> the input will be echoed and <code>=&gt; #lambda</code> 
 printed.</p>
 </li>
 </ol>
-<pre><code>        (𝙙𝙚𝙛𝙞𝙣𝙚 (𝙩𝙚𝙨𝙩)
-	  (𝙬𝙞𝙩𝙝-𝙝𝙖𝙣𝙙𝙡𝙚𝙧𝙨 '((𝙘𝙡𝙞𝙘𝙠-𝙝𝙖𝙣𝙙𝙡𝙚𝙧 &quot;𝙨𝙮𝙢𝙗𝙤𝙡𝙨&quot;))
-	    (𝙡𝙚𝙩 ((𝙞𝙣𝙥𝙪𝙩 (𝙜𝙚𝙩-𝙞𝙣𝙥𝙪𝙩)))
-	      (𝙙𝙞𝙨𝙥𝙡𝙖𝙮𝙡𝙣 &quot;𝙜𝙚𝙩-𝙞𝙣𝙥𝙪𝙩 𝙧𝙚𝙩𝙪𝙧𝙣𝙚𝙙&quot;)
-	      (𝙙𝙞𝙨𝙥𝙡𝙖𝙮𝙡𝙣 𝙞𝙣𝙥𝙪𝙩))))
-
-	(𝙧𝙚𝙨𝙚𝙩 (𝙩𝙚𝙨𝙩))
+<pre><code>	(reset
+	  (with-handlers '((click-handler &quot;foo&quot;))
+			 (let ((input (get-input)))
+			   (displayln &quot;get-input returned&quot;)
+			   (displayln input))))
 </code></pre>
-<ol start="10">
+<ol start="4">
 <li>Click on the word 'Input' near the top of the page. (This word is
-enclosed in an HTML <!-- raw HTML omitted --> element having the ID <code>foo</code>,
+enclosed in an HTML <code>&lt;div&gt;</code> element having the ID <code>foo</code>,
 so it is targeted by the <code>click</code> handler's
 event.) The following will be printed in the <code>Log</code>:</li>
 </ol>
 <pre><code>	get-input returned
-	(click #obj&lt;HTMLTableElement&gt;)
+	(click #obj&lt;HTMLDivElement&gt;)
 </code></pre>
-<ol start="11">
-<li>Click on the table again. Confirm that nothing is added to the <code>Log</code>.
+<ol start="5">
+<li>Click on the word 'Input' again. Confirm that nothing is added to the <code>Log</code>.
 This is because the click handler is automatically removed after the
 program falls through the <code>with-handlers</code> block.</li>
 </ol>
